--- a/src/styles/sections/featured-collection.scss
+++ b/src/styles/sections/featured-collection.scss
@@ -23,6 +23,6 @@
     display: flex;
     justify-content: center;
     margin-bottom: $LAYOUT_S;
-    margin-top: $LAYOUT_S;
+    margin-top: $SPACING_XL;
   }
 }
